--- a/empirical_analysis.ipynb
+++ b/empirical_analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "71f866c0",
    "metadata": {},
    "outputs": [
@@ -502,6 +502,9 @@
     "import seaborn as sns\n",
     "import scipy.stats as stats\n",
     "import statsmodels.formula.api as smf\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
     "df = pd.read_csv(\n",
     "    \"/Users/lilahduboff/Documents/Duke_Unifying_DataScience/UDS_Final_Proj/UDS_CVD_Final_Project_Rep/bangladesh_data.csv\"\n",
@@ -1940,44 +1943,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "fe659854",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Sex                             0\n",
-       "Age                             0\n",
-       "BMI                             0\n",
-       "Total Cholesterol (mg/dL)       0\n",
-       "HDL (mg/dL)                     0\n",
-       "Fasting Blood Sugar (mg/dL)     0\n",
-       "Smoking Status                  0\n",
-       "Diabetes Status                 0\n",
-       "Physical Activity Level         0\n",
-       "Family History of CVD           0\n",
-       "Systolic BP                     0\n",
-       "Diastolic BP                    0\n",
-       "Blood Pressure Category         0\n",
-       "Estimated LDL (mg/dL)           0\n",
-       "CVD Risk Score                 70\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[\"CVD Risk Score\"].isnull().dropna()\n",
-    "\n",
-    "df.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 121,
    "id": "dfedf4a2",
    "metadata": {},
@@ -2024,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "id": "3727b309",
    "metadata": {},
    "outputs": [
@@ -2073,10 +2038,6 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "\n",
     "# Separate features and target\n",
     "X = df.drop(\"CVD Risk Score\", axis=1)\n",
     "y = df[\"CVD Risk Score\"]\n",
@@ -2766,6 +2727,116 @@
    "source": [
     "model = smf.ols(\n",
     "    \"cvd_risk_score ~ diabetes_status + Age + diabetes_status:Age\", data=df\n",
+    ").fit()\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "2b4e233d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = df.columns.str.replace(\" \", \"_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "d6143b95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Sex', 'Age', 'BMI', 'Total_Cholesterol_(mg/dL)', 'HDL_(mg/dL)',\n",
+       "       'Fasting_Blood_Sugar_(mg/dL)', 'Smoking_Status', 'Diabetes_Status',\n",
+       "       'Physical_Activity_Level', 'Family_History_of_CVD', 'Systolic_BP',\n",
+       "       'Diastolic_BP', 'Blood_Pressure_Category', 'Estimated_LDL_(mg/dL)',\n",
+       "       'CVD_Risk_Score', 'Age_group', 'diabetes_status', 'cvd_risk_score'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "03bec521",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"estimated_LDL\"] = df[\"Estimated_LDL_(mg/dL)\"]\n",
+    "df[\"hdl\"] = df[\"HDL_(mg/dL)\"]\n",
+    "df[\"total_cholesterol\"] = df[\"Total_Cholesterol_(mg/dL)\"]\n",
+    "df[\"fasting_blood_sugar\"] = df[\"Fasting_Blood_Sugar_(mg/dL)\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "e9d45576",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:         cvd_risk_score   R-squared:                       0.974\n",
+      "Model:                            OLS   Adj. R-squared:                  0.974\n",
+      "Method:                 Least Squares   F-statistic:                     3913.\n",
+      "Date:                Wed, 23 Apr 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        14:19:27   Log-Likelihood:                -697.40\n",
+      "No. Observations:                1459   AIC:                             1425.\n",
+      "Df Residuals:                    1444   BIC:                             1504.\n",
+      "Df Model:                          14                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===========================================================================================\n",
+      "                              coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------------------\n",
+      "Intercept                   0.2464      0.126      1.956      0.051      -0.001       0.493\n",
+      "diabetes_status             2.0050      0.021     97.176      0.000       1.965       2.045\n",
+      "Sex                         0.0025      0.021      0.124      0.902      -0.038       0.043\n",
+      "Age                         0.0003      0.001      0.355      0.722      -0.001       0.002\n",
+      "BMI                         0.1999      0.002    133.213      0.000       0.197       0.203\n",
+      "total_cholesterol           0.0112      0.001     20.114      0.000       0.010       0.012\n",
+      "hdl                         0.0084      0.001     10.124      0.000       0.007       0.010\n",
+      "fasting_blood_sugar         0.0005      0.000      1.283      0.200      -0.000       0.001\n",
+      "Smoking_Status             -0.0264      0.021     -1.282      0.200      -0.067       0.014\n",
+      "Physical_Activity_Level     0.0018      0.013      0.143      0.886      -0.023       0.027\n",
+      "Family_History_of_CVD       0.0170      0.021      0.825      0.409      -0.023       0.057\n",
+      "Systolic_BP                 0.0494      0.001     87.213      0.000       0.048       0.050\n",
+      "Diastolic_BP               -0.0007      0.001     -0.775      0.438      -0.002       0.001\n",
+      "Blood_Pressure_Category     0.0302      0.013      2.309      0.021       0.005       0.056\n",
+      "estimated_LDL               0.0093      0.001     16.731      0.000       0.008       0.010\n",
+      "==============================================================================\n",
+      "Omnibus:                      321.465   Durbin-Watson:                   1.987\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            10327.289\n",
+      "Skew:                           0.254   Prob(JB):                         0.00\n",
+      "Kurtosis:                      16.024   Cond. No.                     3.85e+03\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 3.85e+03. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = smf.ols(\n",
+    "    \"cvd_risk_score ~ diabetes_status + Sex + Age + BMI + total_cholesterol + hdl + fasting_blood_sugar + Smoking_Status + Physical_Activity_Level + Family_History_of_CVD + Systolic_BP + Diastolic_BP + Blood_Pressure_Category + estimated_LDL\",\n",
+    "    data=df,\n",
     ").fit()\n",
     "print(model.summary())"
    ]
